extras/deployment/configuration-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configuration-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: configuration
  template:
    metadata:
      labels:
        app: configuration
    spec:
      containers:
        - image: landrzejewski/configuration
          name: configuration
          ports:
            - containerPort: 8888
              name: http
