extras/deployment/products-database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-database
  template:
    metadata:
      labels:
        app: products-database
    spec:
      containers:
        - image: postgres:12-alpine
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
