extras/deployment/products-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - image: landrzejewski/products
          name: products
          ports:
            - containerPort: 9001
              name: http
