extras/deployment/site-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
        - image: nginx:1.17.10-alpine
          name: site
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: www
      volumes:
        - name: www
          hostPath:
            path: /www
