extras/deployment/configuration-service.yml
apiVersion: v1
kind: Service
metadata:
  name: configuration-service
spec:
  selector:
    app: configuration
  ports:
    - port: 8888
      targetPort: http
