extras/deployment/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: kafka
