extras/deployment/products-database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: products-database-service
spec:
  selector:
    app: products-database
  ports:
    - port: 5432
      targetPort: postgres
