extras/deployment/products-service.yml
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products
  ports:
    - port: 9001
      targetPort: products
