extras/deployment/site-service.yml
apiVersion: v1
kind: Service
metadata:
  name: site-service
spec:
  selector:
    app: site
  ports:
    - port: 80
      targetPort: http
