extras/deployment/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /www
            backend:
              serviceName: site-service
              servicePort: 80
          - path: /api(/|$)(.*)
            backend:
              serviceName: products-service
              servicePort: 80
